fixed hamburger dropdown gap

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -144,7 +144,7 @@ ul {
   #navbarContent {
     position: absolute;
     right: 0;
-    top: 50px;
+    top: 45px;
     padding: 0.5em 1em;
     background: #343a40;
     width: 100%;
